# Software_2026

./: .gitignore  .gitmodules  Iceberg_Max_Depth.py  LICENSE  README.md  compose.dev.yaml  compose.yaml  dev_compose.yaml  package-lock.json  yolo_detect.py
.github/: copilot-instructions.md
Iceberg_task/: Iceberg_Max_Depth.py
Tools/: add-exif-data.sh  cv2_fisheye_calibration.py  image_to_array.py  install_rswebrtc.bash  install_rswebrtc.sh  realitykit_batch_tester.sh  upload-to-webodm.py  webodm_bruteforce.py
Tools/alpine/: build_ros.sh
camjs/: main.js  package-lock.json
carp_gui_video_generator/: install.sh  invasive_carp_video_generator.py  run.sh
cloudinit/: README.md
cloudinit/eer-bs-cam1/: 50-trixie-fixie.yaml  network-config  user-data
cloudinit/eer-bs-cam2/: 50-trixie-fixie.yaml  network-config  user-data
cloudinit/eer-bs-pi/: 50-trixie-fixie.yaml  51-docker-bridge.yaml  meta-data  network-config  user-data
cloudinit/eer-bs-test-1/: 50-trixie-fixie.yaml  network-config  user-data
firmware/: README.md
firmware/Boards/boredboard/: auxiliaries.kicad_sch  boredboard.kicad_pcb  boredboard.kicad_prl  boredboard.kicad_pro  boredboard.kicad_sch  boredlibrary.bak  boredlibrary.kicad_sym  connections.kicad_sch  drivers_and_escs.kicad_sch  fp-info-cache  fp-lib-table  microcontroler.kicad_sch  power_conversion.kicad_sch  sym-lib-table
firmware/Embedded Code/BoredBoard/: BoredBoard.c  CMakeLists.txt
firmware/LapisLazuli/: CMakeLists.txt  main.c
ros_workspace/: Dockerfile  README.md  docker_backend_entry_script.sh  docker_entry_script.sh  docker_frontend_entry_script.sh  package-lock.json
ros_workspace/.devcontainer/: devcontainer.json
ros_workspace/src/beaumont_backend/: CMakeLists.txt  package.xml  setup.cfg
ros_workspace/src/beaumont_backend/beaumont_backend/: autonomus_brain_coral_transplant.py  colour_finder.py  i2c_master.py  simulation_bot_control.py  task_manager.py
ros_workspace/src/beaumont_backend/launch/: beaumont_startup.xml  simulation_beaumont_startup.xml
ros_workspace/src/bluestar_backend/: CMakeLists.txt  package.xml
ros_workspace/src/bluestar_backend/include/: bluestar_constants.h
ros_workspace/src/bluestar_backend/launch/: bluestar_startup.xml  simulation_bluestar_startup.xml
ros_workspace/src/bluestar_backend/src/: bluestar_constants.cpp  i2c_master.cpp  pilot_listener.cpp  simulation_bot_control.cpp
ros_workspace/src/bluestar_frontend/: CMakeLists.txt  package.xml
ros_workspace/src/bluestar_frontend/include/bluestar_frontend/: Camera.hpp  Config.hpp  Image.hpp  PilotActions.hpp  ROS.hpp  webrtc_stream.h
ros_workspace/src/bluestar_frontend/include/bluestar_frontend/core/: ConfigLoader.hpp  ROS.hpp  RovState.hpp
ros_workspace/src/bluestar_frontend/include/bluestar_frontend/gui/: InputManager.hpp  UIRenderer.hpp
ros_workspace/src/bluestar_frontend/include/bluestar_frontend/images/: nosignal.h
ros_workspace/src/bluestar_frontend/include/bluestar_frontend/streaming/: CameraStream.hpp  backend_webrtcbin.hpp
ros_workspace/src/bluestar_frontend/include/glad/: README.md
ros_workspace/src/bluestar_frontend/launch/: bluestar_frontend.xml
ros_workspace/src/bluestar_frontend/src/: Camera.cpp  frontend_node.cpp  main.cpp  webrtc_stream.cpp
ros_workspace/src/bluestar_frontend/src/core/: ConfigLoader.cpp  ROS.cpp
ros_workspace/src/bluestar_frontend/src/gui/: InputManager.cpp  UIRenderer.cpp
ros_workspace/src/bluestar_frontend/src/streaming/: CameraStreamFactory.cpp  backend_webrtcbin.cpp  backend_whepclientsrc.cpp
ros_workspace/src/bluestar_officer_frontend/: CMakeLists.txt  README.md  package.xml
ros_workspace/src/common_backend/: CMakeLists.txt  package.xml
ros_workspace/src/common_backend/src/: ConfigManager.cpp
ros_workspace/src/config_manager/: CMakeLists.txt  package.xml
ros_workspace/src/eer_interfaces/: CMakeLists.txt  package.xml
ros_workspace/src/eer_interfaces/msg/: BlueStarControl.msg  PilotInput.msg
ros_workspace/src/eer_interfaces/srv/: Cameras.srv  GetConfig.srv  ListConfig.srv
ros_workspace/src/waterwitch_backend/: CMakeLists.txt  package-lock.json  package.json  package.xml
ros_workspace/src/waterwitch_backend/include/: waterwitch_constants.h
ros_workspace/src/waterwitch_backend/launch/: simulation_waterwitch_startup.xml  waterwitch_startup.xml
ros_workspace/src/waterwitch_backend/src/: pilot_listener.cpp  simulation_bot_control.cpp  uart.cpp  waterwitch_constants.cpp
ros_workspace/src/waterwitch_frontend/: CMakeLists.txt  package-lock.json  package.xml
ros_workspace/src/waterwitch_frontend/include/waterwitch_frontend/: Config.hpp  Power.hpp  ROS.hpp
ros_workspace/src/waterwitch_frontend/include/waterwitch_frontend/images/: logo.h
ros_workspace/src/waterwitch_frontend/launch/: waterwitch_frontend.xml
ros_workspace/src/waterwitch_frontend/src/: main.cpp
science_officer/: README.md  launch_task.sh
science_officer/Iceberg/: Iceberg_Max_Depth.py  Iceberg_threat_calc.xlsx  Iceberg_threat_calc_with_clear.xlsm  README.md  iceberg_mapper.py
science_officer/bluestar_officer_frontend/: CMakeLists.txt  README.md
science_officer/bluestar_officer_frontend/include/bluestar_officer_frontend/: Camera.hpp  Config.hpp
science_officer/bluestar_officer_frontend/include/bluestar_officer_frontend/images/: nosignal.h
science_officer/bluestar_officer_frontend/include/bluestar_officer_frontend/streaming/: backend_whepclientsrc.hpp
science_officer/bluestar_officer_frontend/include/glad/: CMakeLists.txt
science_officer/bluestar_officer_frontend/include/glad/include/glad/: glad.h
science_officer/bluestar_officer_frontend/include/glad/src/: glad.c
science_officer/bluestar_officer_frontend/src/: Camera.cpp  main.cpp
science_officer/coral_garden/: README.md  garden_scale.py  webodm_upload.py
science_officer/invasive_craba/: README.md  yolo_detect.py
science_officer/shared/: common_args.py  fisheye_list.py  frame_capture.py  opencv_helpers.py
web_frontend/: README.md  package-lock.json  package.json
web_frontend/src/: index.tsx
web_frontend/src/api/: Atoms.tsx  ROS.tsx
(+175 files in other folders)
