<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
 <name>waterwitch_frontend</name>
  <version>0.0.0</version>
  <description>An ROV piloting frontend built using C++ designed to control Eastern Edge's 2025 ROV Waterwitch.</description>
  <maintainer email="easternedgerobotics@gmail.com">Eastern Edge Robotics</maintainer>
  <license>MIT License</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>eer_interfaces</depend> 

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
